--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "dependencies": {
     "@babel/runtime": "^7.12.1",
     "dayjs": "^1.9.6",
+    "debugout": "^1.0.0",
+    "debugout.js": "^1.1.0",
     "esbuild": "^0.11.6",
     "flatpickr": "^4.6.6",
     "jquery": "^2.2.4",
