--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@babel/runtime": "^7.12.1",
     "dayjs": "^1.9.6",
+    "debugout.js": "^1.1.0",
     "flatpickr": "^4.6.6",
     "jquery": "^2.2.4",
     "numeral": "^2.0.6",
